--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "immer": "^3.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "ngx-bootstrap": "~5.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
